<resources>
    <string name="app_name">Health Connect Ext</string>

    <string name="installed_welcome_message">
        Health Connect is installed on this device. You are good to go!
    </string>

    <string name="market_url">market://details</string>
    <string name="health_connect_package">com.google.android.apps.healthdata</string>
    <string name="onboarding_url">healthconnect://onboarding</string>
    <string name="not_installed_description">
        Health Connect is supported on this device, but is either not installed, or requires an update.
    </string>
    <string name="not_installed_link_text">
        To use this sample, please install or update the Health Connect package via Google Play.
    </string>


    <string name="not_supported_url">https://developer.android.com/health-connect</string>
    <string name="not_supported_description">
        Health Connect is only supported on Android devices running API level _SDK_ or above.
    </string>
    <string name="not_supported_link_text">
        Please visit the Health Connect guides to learn more about device compatibility and using
        Health Connect.
    </string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="open_health_data">Open Health Data</string>
    <string name="steps">Steps</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="respiratory_rate">Respiratory Rate</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="oxygen_level">Oxygen Level</string>
    <string name="body_temp">Body Temp</string>
    <string name="create_client">Create Client</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="minutes">minutes</string>
    <string name="enter_interval">Enter Interval</string>
    <string name="interval">Interval</string>
    <string name="settings">Settings</string>
    <string name="reject">Reject</string>
    <string name="grant">Grant</string>

    <string-array name="sleep_notes_array">
        <item>I slept great!</item>
        <item>I got woken up</item>
        <item>Struggled to sleep</item>
        <item>Much needed sleep</item>
        <item>Restful sleep</item>
    </string-array>
</resources>